# ingarss-workshop-2024

./: .buildinfo  .gitignore  README.md  environment.yml  genindex.html  intro.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/docs/: 02_dynamic_visualization.ipynb  04_vector_processing.ipynb
book/: _config.yml  _toc.yml  intro.md
book/docs/: 00_setup.ipynb  01_stac_and_zarr.ipynb  02_dynamic_visualization.ipynb  04_vector_processing.ipynb  05_optimization_and_scaling.ipynb  Raster_Vector_Efficiency_Lesson.ipynb  devseed.ipynb  dynamic-visualization.ipynb  era5.ipynb
docs/: 00_setup.html  01_stac_and_zarr.html  02_dynamic_visualization.html  03_raster_and_vector.html  04_vector_processing.html  05_optimization_and_scaling.html
eo_hackathon_2024/: README.md  download_data.ipynb
