[project]
name = "ingarss-workshop-2024"
version = "0.1.0"
description = "InGARSS 2024 Workshop - Development Seed & SatSure"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "adlfs>=2024.7.0",
    "dask>=2024.11.2",
    "fsspec>=2024.10.0",
    "geopandas>=1.0.1",
    "lonboard>=0.10.3",
    "matplotlib>=3.9.2",
    "planetary-computer>=1.0.0",
    "pyarrow>=18.0.0",
    "pystac-client>=0.8.5",
    "xarray>=2024.11.0",
    "zarr>=2.18.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.1",
]
